--- a/frontend/src/Components/NavBar/navBar.css
+++ b/frontend/src/Components/NavBar/navBar.css
@@ -53,6 +53,25 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  position: relative;
+  transition: color 0.3s ease;
+}
+
+.navbar-menu li:hover {
+  color: #ff4141;
+}
+
+.navbar-menu li:hover::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: #ff4141;
+  display: block;
+}
+
+.navbar-menu li a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .navbar-login-cart {
