--- a/frontend/src/Components/NavBar/navBar.css
+++ b/frontend/src/Components/NavBar/navBar.css
@@ -75,6 +75,7 @@
 }
 
 .navbar-login-cart {
+  position: relative;
   display: flex;
   align-items: center;
   gap: 2rem;
@@ -104,17 +105,18 @@
 }
 
 .cart-count {
-  position: relative;
-  top: -1rem;
-  left: -2.5rem;
+  position: absolute;
+  top: -5px;
+  right: -5px;
   width: 1.5rem;
   height: 1.5rem;
+  background-color: #ff4141;
+  color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  background-color: #ff4141;
-  color: #fff;
   font-size: 1rem;
   font-weight: 500;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
