--- a/frontend/src/Components/Newsletters/newsletters.css
+++ b/frontend/src/Components/Newsletters/newsletters.css
@@ -27,24 +27,24 @@
 
 .newsletters form {
   width: 730px;
+  height: 70px;
   background-color: white;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   gap: 20px;
+  border-radius: 80px;
+  border: 1px solid #e3e3e3;
 }
 
 .newsletters form input {
-  width: 730px;
-  height: 70px;
-  padding: 0 20px;
+  width: 500px;
+  margin-left: 20px;
   border: none;
-  border-radius: 80px;
-  font-size: 1.5rem;
-  font-weight: 400;
-  color: #454545;
-  background: #FDE1FF;
   outline: none;
+  color: #616161;
+  font-family: Poppins, sans-serif;
+  font-size: 1.5rem;
 }
 
 .newsletters form input::placeholder {
@@ -55,14 +55,14 @@
 .newsletters form button {
   width: 210px;
   height: 70px;
-  border: none;
-  border-radius: 80px;
+  background: black;
+  color: white;
   font-size: 1.5rem;
   font-weight: 700;
-  color: #FDE1FF;
-  background: #454545;
-  outline: none;
   cursor: pointer;
+  border: none;
+  border-radius: 80px;
+  transition: all 0.3s ease;
 }
 
 .newsletters form button:hover {
