--- a/frontend/src/Components/Newsletters/newsletters.css
+++ b/frontend/src/Components/Newsletters/newsletters.css
@@ -68,6 +68,7 @@
 .newsletters form button:hover {
   background: #FDE1FF;
   color: #454545;
+  transform: scale(1.05);
 }
 
 .newsletters form button:active {
