--- a/frontend/src/Pages/CSS/shopCategory.css
+++ b/frontend/src/Pages/CSS/shopCategory.css
@@ -43,21 +43,26 @@
 }
 
 .shop-category-load-more {
+  width: 235px;
+  height: 70px;
+  margin: 2rem auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 2rem 0;
 }
 
 .shop-category-load-more button {
-  padding: .625rem 1.25rem;
-  border: 1px solid #888;
+  width: 100%;
+  height: 100%;
+  background-color: #ededed;
+  color: #787878;
+  border: none;
   border-radius: 2.5rem;
-  background-color: #fff;
+  font-size: 1.25rem;
   cursor: pointer;
   transition: background-color .3s;
 }
 
 .shop-category-load-more button:hover {
-  background-color: #f0f0f0;
+  background-color: #dcdcdc;
 }
