--- a/frontend/src/Components/ProductDisplay/productDisplay.css
+++ b/frontend/src/Components/ProductDisplay/productDisplay.css
@@ -9,7 +9,7 @@
 .product-display-container {
   flex: 3;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   margin: 20px 0;
   padding: 20px 0;
   border: 1px solid #e0e0e0;
