--- a/frontend/src/Components/ProductDisplay/productDisplay.css
+++ b/frontend/src/Components/ProductDisplay/productDisplay.css
@@ -95,7 +95,7 @@
   font-size: 1.5rem;
   font-weight: 500;
   text-decoration: line-through;
-  color: #ff0000;
+  color: #9e9e9e;
   margin-bottom: 20px;
 }
 
