--- a/frontend/src/Components/ProductDisplay/productDisplay.css
+++ b/frontend/src/Components/ProductDisplay/productDisplay.css
@@ -2,8 +2,8 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  margin: 20px 0;
-  padding: 20px 0;
+  margin: 0 0 20px 0;
+  padding: 0 0 20px 0;
 }
 
 .product-display-container {
