--- a/frontend/src/Components/ProductDisplay/productDisplay.css
+++ b/frontend/src/Components/ProductDisplay/productDisplay.css
@@ -65,9 +65,10 @@
 }
 
 .product-display-title {
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: 600;
   margin-bottom: 20px;
+  text-align: left;
 }
 
 .product-display-review {
@@ -92,18 +93,43 @@
 }
 
 .product-display-price-old {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.product-display-price-old-label {
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #9e9e9e;
+  margin-right: 10px;
+}
+
+.product-display-price-old-value {
   font-size: 1.5rem;
   font-weight: 500;
   text-decoration: line-through;
   color: #9e9e9e;
-  margin-bottom: 20px;
+  margin-right: 10px;
 }
 
 .product-display-price-new {
-  font-size: 2rem;
-  font-weight: 600;
-  color: #388e3c;
+  display: flex;
+  align-items: center;
   margin-bottom: 20px;
+}
+
+.product-display-price-new-label {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-right: 10px;
+}
+
+.product-display-price-new-value {
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #388e3c;
+  margin-right: 10px;
 }
 
 .product-display-description {
