--- a/frontend/src/Components/Breadcrumbs/breadcrumbs.css
+++ b/frontend/src/Components/Breadcrumbs/breadcrumbs.css
@@ -14,7 +14,7 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  margin-bottom: 20px;
+  margin: 20px 0;
 }
 
 .breadcrumbs-container a {
