--- a/frontend/src/Components/ProductDisplay/productDisplay.css
+++ b/frontend/src/Components/ProductDisplay/productDisplay.css
@@ -169,12 +169,22 @@
   height: 30px;
   border-radius: 50%;
   cursor: pointer;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.product-display-color:hover {
+  transform: scale(1.1);
 }
 
 .product-display-color-dot {
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  cursor: pointer;
 }
 
 .product-display-sizes {
@@ -204,6 +214,15 @@
   border: 1px solid #e0e0e0;
   border-radius: 5px;
   cursor: pointer;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.product-display-size:hover {
+  border-color: #388e3c;
 }
 
 .product-display-quantity {
@@ -253,12 +272,14 @@
   width: 100%;
   height: 50px;
   margin-top: 20px;
+  padding: 0 20px;
   border: none;
-  border-radius: 5px;
-  font-size: 1.5rem;
+  border-radius: 10px;
+  font-size: 1.2rem;
   font-weight: 600;
   text-transform: uppercase;
   background-color: #388e3c;
+  letter-spacing: 1px;
   color: white;
   cursor: pointer;
   transition: all 0.3s;
@@ -285,12 +306,14 @@
   width: 100%;
   height: 50px;
   margin-top: 20px;
+  padding: 0 20px;
   border: none;
-  border-radius: 5px;
-  font-size: 1.5rem;
+  border-radius: 10px;
+  font-size: 1.2rem;
   font-weight: 600;
   text-transform: uppercase;
   background-color: #1976d2;
+  letter-spacing: 1px;
   color: white;
   cursor: pointer;
   transition: all 0.3s;
