--- a/frontend/src/Components/Cart/cartItems.css
+++ b/frontend/src/Components/Cart/cartItems.css
@@ -11,7 +11,7 @@
   margin-top: 20px;
   padding: 20px 0;
   width: 100%;
-  background-color: #d9d9d9;
+  background-color: #f0f0f0;
   border-radius: 15px;
   margin-bottom: 20px;
 }
@@ -45,16 +45,15 @@
 }
 
 .cart-item-wrapper {
-  background-color: #f0f0f0;
+  background-color: #ffffff;
   border-radius: 15px;
   margin: 10px 20px;
 }
 
 .cart-item {
-  background-color: #f0f0f0;
-  border-radius: 15px;
   margin: 10px 0;
   width: 100%;
+  border-radius: 15px;
   display: grid;
   grid-template-columns: .5fr 1fr 1fr 1fr 1fr 1fr;
   align-items: center;
@@ -77,7 +76,7 @@
   height: 30px;
   border: none;
   border-radius: 15px;
-  background-color: #f0f0f0;
+  background-color: #ffffff;
   cursor: pointer;
   -webkit-transition: background-color 0.3s;
   -moz-transition: background-color 0.3s;
@@ -114,7 +113,7 @@
   margin-top: 20px;
   padding: 20px;
   width: 100%;
-  background-color: #d9d9d9;
+  background-color: #f0f0f0;
   border-radius: 15px;
   margin-bottom: 20px;
 }
@@ -127,7 +126,7 @@
   margin-top: 20px;
   padding: 20px;
   width: 100%;
-  background-color: #f0f0f0;
+  background-color: #ffffff;
   border-radius: 15px;
   margin-bottom: 20px;
 }
@@ -175,7 +174,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
-  background-color: #f0f0f0;
+  background-color: #ffffff;
   border-radius: 15px;
 }
 
@@ -203,7 +202,7 @@
   height: 50px;
   font-size: 1.2rem;
   font-weight: 500;
-  background-color: #f0f0f0;
+  background-color: #ffffff;
   border: none;
   border-radius: 15px;
   padding: 0 20px;
@@ -241,12 +240,12 @@
 }
 
 .cart-items-promo button:disabled {
-  background-color: #f0f0f0;
+  background-color: #ffffff;
   cursor: not-allowed;
 }
 
 .cart-items-promo button:disabled:hover {
-  background-color: #f0f0f0;
+  background-color: #ffffff;
 }
 
 .checkout-button button {
@@ -270,18 +269,18 @@
 .checkout-button button:hover {
   background-color: #00a043;
   transform: scale(1.05);
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  -o-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  -ms-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  -o-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  -ms-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .checkout-button button:disabled {
-  background-color: #f0f0f0;
+  background-color: #ffffff;
   cursor: not-allowed;
 }
 
 .checkout-button button:disabled:hover {
-  background-color: #f0f0f0;
+  background-color: #ffffff;
 }
