--- a/frontend/src/Components/Cart/cartItems.css
+++ b/frontend/src/Components/Cart/cartItems.css
@@ -225,18 +225,24 @@
   font-weight: 500;
   border: none;
   border-radius: 15px;
-  background-color: #00a043;
+  background-color: #000000;
   color: #fff;
   cursor: pointer;
-  -webkit-transition: background-color 0.3s;
-  -moz-transition: background-color 0.3s;
-  -o-transition: background-color 0.3s;
-  -ms-transition: background-color 0.3s;
-  transition: background-color 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .cart-items-promo button:hover {
-  background-color: #00a043;
+  background-color: #000000;
+  transform: scale(1.05);
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  -o-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  -ms-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .cart-items-promo button:disabled {
