--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,3 +19,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a {
+  display: inline-block;
+  color: #282c34;
+}
