--- a/frontend/src/Components/Item/item.css
+++ b/frontend/src/Components/Item/item.css
@@ -1,7 +1,5 @@
 .item {
-  width: 350px;
-  height: 400px;
-  margin: 10px;
+  width: 300px;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
@@ -16,9 +14,13 @@
   transition: transform 0.3s ease;
 }
 
-.item img {
-  width: 100%;
-  height: 200px;
+.item-image {
+  display: flex;
+  justify-content: center;
+}
+
+.item-image img {
+  width: 95%;
   object-fit: cover;
   border-radius: 10px;
 }
@@ -29,9 +31,19 @@
   justify-content: space-between;
 }
 
+.item-details a {
+  color: #282c34;
+  text-decoration: none;
+}
+
+.item-details a:hover {
+  color: #ff4141;
+}
+
 .item-details h3 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   margin: 10px 0;
+  text-align: left;
 }
 
 .item-price {
