--- a/frontend/src/Components/NewCollections/newCollections.css
+++ b/frontend/src/Components/NewCollections/newCollections.css
@@ -23,8 +23,11 @@
 }
 
 .collections {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 20px;
-  margin-top: 20px;
+  display: flex;
+  gap: 1.25rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 2rem auto;
 }
