--- a/frontend/src/Components/NavBar/navBar.css
+++ b/frontend/src/Components/NavBar/navBar.css
@@ -121,7 +121,7 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.navbar-dropdown {
+.navbar-dropdown-icon {
   display: none;
 }
 
@@ -143,6 +143,11 @@
     font-size: 1rem;
   }
 
+  .navbar-login-cart img {
+    width: 2rem;
+    height: 2rem;
+  }
+
   .cart-count {
     width: 1.2rem;
     height: 1.2rem;
@@ -155,17 +160,14 @@
     font-size: 1.2rem;
   }
 
-  .navbar-dropdown {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  .navbar-dropdown-icon {
+    display: block;
     position: absolute;
-    top: 4rem;
+    top: 1rem;
     right: 1rem;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 1rem;
-    border-radius: 0.5rem;
+    font-size: 1.5rem;
+    color: #171717;
+    cursor: pointer;
   }
 
   .navbar-login-btn {
