--- a/frontend/src/Components/NavBar/navBar.css
+++ b/frontend/src/Components/NavBar/navBar.css
@@ -1,4 +1,5 @@
 .navbar {
+  position: relative;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -130,10 +131,6 @@
     padding: 1rem;
   }
 
-  .navbar-menu {
-    display: none;
-  }
-
   .navbar-login-cart {
     gap: 1rem;
   }
@@ -149,8 +146,8 @@
   }
 
   .cart-count {
-    width: 1.2rem;
-    height: 1.2rem;
+    width: 1.3rem;
+    height: 1.3rem;
     font-size: 0.8rem;
   }
 }
@@ -158,6 +155,23 @@
 @media screen and (max-width: 768px) {
   .navbar-logo h1 {
     font-size: 1.2rem;
+  }
+
+  .navbar-menu {
+    display: none;
+    position: absolute;
+    top: 4rem;
+    left: 0;
+    width: 100%;
+    justify-content: center;
+    background-color: #fff;
+    -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    -o-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    -ms-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 1rem;
+    z-index: 1;
   }
 
   .navbar-dropdown-icon {
@@ -176,8 +190,8 @@
   }
 
   .cart-count {
-    width: 1rem;
-    height: 1rem;
+    width: 1.2rem;
+    height: 1.2rem;
     font-size: 0.7rem;
   }
 }
