--- a/frontend/src/Components/NewCollections/newCollections.css
+++ b/frontend/src/Components/NewCollections/newCollections.css
@@ -51,7 +51,7 @@
   }
 
   .item {
-    width: 100%;
+    width: 45%;
   }
 
   .item img {
@@ -67,4 +67,23 @@
   .collections {
     grid-template-columns: 1fr;
   }
+}
+
+@media screen and (max-width: 350px) {
+  .collections {
+    grid-template-columns: 1fr;
+  }
+
+  .item {
+    width: 100%;
+  }
+
+  .item img {
+    width: 100%;
+  }
+
+  .item h3 {
+    font-size: 1rem;
+  }
+
 }
