--- a/frontend/src/Components/ProductDisplay/productDisplay.css
+++ b/frontend/src/Components/ProductDisplay/productDisplay.css
@@ -10,8 +10,10 @@
   flex: 3;
   display: flex;
   align-items: flex-start;
-  margin: 20px 0;
-  padding: 20px 0;
+  justify-content: space-between;
+  gap: 20px;
+  margin: 0 20px;
+  padding: 20px;
   border: 1px solid #e0e0e0;
   border-radius: 5px;
   background-color: white;
@@ -22,8 +24,6 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  margin: 0 20px;
-  padding: 20px;
   border-radius: 5px;
   background-color: white;
 }
@@ -40,9 +40,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  margin: 0 20px;
-  padding: 20px;
+  flex: 1;
   border-radius: 5px;
   background-color: white;
 }
