--- a/frontend/src/Components/Cart/cartItems.css
+++ b/frontend/src/Components/Cart/cartItems.css
@@ -171,7 +171,7 @@
 
 .cart-items-promo {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
   background-color: #ffffff;
@@ -198,7 +198,6 @@
 }
 
 .cart-items-promo input {
-  width: 300px;
   height: 50px;
   font-size: 1.2rem;
   font-weight: 500;
@@ -219,10 +218,10 @@
 }
 
 .cart-items-promo button {
-  width: 100px;
   height: 50px;
   font-size: 1.2rem;
   font-weight: 500;
+  padding: 0 20px;
   border: none;
   border-radius: 15px;
   background-color: #000000;
@@ -292,7 +291,25 @@
   background-color: #ffffff;
 }
 
+@media screen and (max-width: 1440px) {
+  .cart-items-header-wrapper {
+    grid-template-columns: .5fr 3fr 0.5fr 0.5fr 0.5fr 0.5fr;
+  }
+
+  .cart-item {
+    grid-template-columns: .5fr 3fr 0.5fr 0.5fr 0.5fr 0.5fr;
+  }
+
+  .cart-items-promo input {
+    margin-right: 0;
+  }
+}
+
 @media screen and (max-width: 1024px) {
+  .cart-items-header-wrapper {
+    grid-template-columns: .5fr 3fr 0.5fr 0.5fr 0.5fr 0.5fr;
+  }
+
   .cart-items {
     display: flex;
     flex-direction: column;
@@ -300,8 +317,50 @@
     margin: 20px;
   }
 
+  .cart-item {
+    grid-template-columns: .5fr 3fr 0.5fr 0.5fr 0.5fr 0.5fr;
+  }
+
   .cart-items-promo input {
     width: 100%;
     margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cart-items-header-wrapper {
+    grid-template-columns: .5fr 3fr 0.5fr 0.5fr 0.5fr 0.5fr;
+  }
+
+  .cart-items {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 20px;
+  }
+
+  .cart-item {
+    grid-template-columns: .5fr 3fr 0.5fr 0.5fr 0.5fr 0.5fr;
+  }
+
+  .cart-items-promo input {
+    width: 100%;
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .cart-items-header-wrapper {
+    display: none;
+  }
+
+  .cart-item {
+    grid-template-columns: .5fr 1fr;
+    gap: 10px;
+  }
+
+  .cart-item-image {
+    width: 100px;
+    height: 120px;
   }
 }
