--- a/admin/src/Components/Navbar/Navbar.css
+++ b/admin/src/Components/Navbar/Navbar.css
@@ -1,11 +1,15 @@
 .navbar {
+  height: 100px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 1rem 2rem;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin-bottom: 2rem;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 200;
 }
 
 .navbar-logo {
