--- a/admin/src/Components/Sidebar/Sidebar.css
+++ b/admin/src/Components/Sidebar/Sidebar.css
@@ -72,28 +72,32 @@
 
 @media screen and (max-width: 768px) {
   .sidebar {
-    top: 100px;
+    flex-direction: row;
+    position: static;
     width: 100%;
-    max-width: 100%;
+    max-width: 95%;
+    margin: 20px auto 0;
+    padding: 10px 20px;
     gap: 10px;
-    padding: 10px;
+    border-radius: 10px;
+  }
+
+  .sidebar-wrapper {
+    flex-direction: row;
+    gap: 0;
+  }
+
+  .sidebar-menu {
+    flex-direction: row;
+    gap: 10px;
   }
 
   .sidebar-title {
     display: none;
   }
 
-  .sidebar-list-item-text {
-    display: none;
-  }
-
-  .sidebar-list-item {
-    justify-content: center;
-    padding: 10px 0;
-  }
-
-  .sidebar-list-item-icon {
-    width: 30px;
-    height: 30px;
+  .sidebar-list {
+    display: flex;
+    gap: 20px;
   }
 }
