--- a/admin/src/Components/AddProduct/AddProduct.css
+++ b/admin/src/Components/AddProduct/AddProduct.css
@@ -18,7 +18,7 @@
   font-weight: 600;
   color: #000;
   text-align: center;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 .add-product-form {
@@ -35,6 +35,7 @@
 
 .add-product-form-group-row {
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
 }
 
