--- a/admin/src/Components/ProductList/ProductList.css
+++ b/admin/src/Components/ProductList/ProductList.css
@@ -102,3 +102,9 @@
   -ms-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
 }
+
+@media screen and (min-width: 768px) {
+  .product-list {
+    width: 95%;
+  }
+}
