--- a/admin/src/Pages/Admin/Admin.css
+++ b/admin/src/Pages/Admin/Admin.css
@@ -1,20 +1,26 @@
 .admin {
-  display: flex;
-  align-items: baseline;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 250px 1fr;
   height: 100vh;
 }
 
 .admin-content {
   width: 100%;
-  max-width: 1200px;
   display: flex;
   gap: 20px;
+  overflow-x: hidden;
+}
+
+@media screen and (max-width: 1024px) {
+  .admin {
+    grid-template-columns: 200px 1fr;
+  }
 }
 
 @media screen and (max-width: 768px) {
   .admin {
-    height: auto;
+    display: flex;
     flex-direction: column;
+    height: auto;
   }
 }
