--- a/frontend/src/Pages/CSS/loginSignup.css
+++ b/frontend/src/Pages/CSS/loginSignup.css
@@ -105,35 +105,85 @@
   cursor: pointer;
 }
 
-.signup-agreement {
+.login-signup-agreement {
   width: 100%;
   margin-top: 20px;
   color: #5c5c5c;
 }
 
-.signup-agreement label {
+.login-signup-agreement label {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.signup-agreement input {
+.login-signup-agreement input {
   margin-right: 10px;
   cursor: pointer;
 }
 
-.signup-agreement p {
+.login-signup-agreement p {
   font-size: 0.875rem;
   text-align: center;
 }
 
-.signup-agreement p span {
+.login-signup-agreement p span {
   color: #ff4141;
   cursor: pointer;
 }
 
-.signup-agreement p span:hover {
+.login-signup-agreement p span:hover {
   text-decoration: underline;
+}
+
+.login-signup-footer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.login-signup-social {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.login-signup-social button {
+  width: 100%;
+  height: 70px;
+  background-color: #fff;
+  border: 1px solid #ff4141;
+  border-radius: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.login-signup-social button img {
+  width: 30px;
+  height: 30px;
+}
+
+.login-signup-social button:hover {
+  background-color: #ff4141;
+}
+
+.login-signup-social button:hover img {
+  filter: invert(1);
+}
+
+.login-signup-social button span {
+  color: #ff4141;
+  font-size: 1.125rem;
+  font-weight: 600;
 }
 
 @media screen and (max-width: 768px) {
@@ -160,7 +210,7 @@
     font-size: 0.875rem;
   }
 
-  .signup-agreement p {
+  .login-signup-agreement p {
     font-size: 0.75rem;
   }
 }
