--- a/frontend/src/Pages/CSS/loginSignup.css
+++ b/frontend/src/Pages/CSS/loginSignup.css
@@ -174,6 +174,7 @@
 
 .login-signup-social button:hover {
   background-color: #ff4141;
+  color: #fff;
 }
 
 .login-signup-social button:hover img {
