--- a/admin/src/Components/ProductList/ProductList.css
+++ b/admin/src/Components/ProductList/ProductList.css
@@ -1,9 +1,10 @@
 .product-list {
   width: 100%;
-  margin: 20px auto;
+  margin: 20px;
 }
 
 .product-list-wrapper {
+  height: calc(100vh - 140px);
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -25,6 +26,10 @@
   text-transform: capitalize;
 }
 
+.product-list-main {
+  overflow: auto;
+}
+
 .product-list-header {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr 1fr 1fr 1fr;
@@ -32,14 +37,19 @@
   gap: 20px;
   width: 100%;
   padding: 20px 0;
+  background-color: #f5f5f5;
   border-top: 1px solid #c5c5c5;
   border-bottom: 1px solid #c5c5c5;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
 }
 
-.product-list-main p {
+.product-list-header p {
   font-size: 1rem;
   font-weight: 600;
   color: #000;
+  padding: 0 10px;
   text-align: left;
   text-transform: capitalize;
 }
@@ -75,6 +85,7 @@
   font-size: 1rem;
   font-weight: 500;
   color: #000;
+  padding: 0 10px;
   text-align: left;
   text-transform: capitalize;
 }
@@ -105,16 +116,13 @@
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
 }
 
-@media screen and (min-width: 768px) {
-  .product-list {
-    width: 95%;
-  }
-}
-
 @media screen and (max-width: 1050px) {
+  .product-list {
+    width: calc(100% - 40px);
+  }
+
   .product-list-main {
     width: 100%;
-    overflow-x: auto;
   }
 
   .product-list-header {
@@ -123,15 +131,5 @@
 
   .product-list-items {
     width: 1000px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .product-list-header {
-    width: 800px;
-  }
-
-  .product-list-items {
-    width: 800px;
   }
 }
